# bitKatalog

./: AUTHORS  CMakeLists.txt  ChangeLog  README  README.md  TODO  bitKatalog.xmi  build-appimage.sh
data/: bitKatalog.desktop  test.xfc  test.xfc0  xfc.css  xfc.dtd  xfc.xsl  xfc0ToXfc.xsl
doc/: class-dia.xmi
src/: CMakeLists.txt  fs.cpp  fs.h  main.cpp  misc.cpp  misc.h  plugins.cpp  plugins.h  sha1.c  sha2.c  xfcapp.h
src/app_cli/: CMakeLists.txt  interface.cpp  interface.h  xfcapp_cli.cpp
src/app_kde/: CMakeLists.txt  adddiskbox.cpp  adddiskbox.h  bitkatalog.cpp  bitkatalog.desktop  bitkatalog.h  bitkatalog.lsm  bitkatalog_client.cpp  bitkatalogiface.h  bitkatalogui.rc  bitkatalogview.cpp  bitkatalogview.h  detailsbox.cpp  detailsbox.h  labelsbox.cpp  labelsbox.h  localfiles.cpp  localfiles.h  main.cpp  main.h  newcatalogbox.cpp  newcatalogbox.h  outputwindow.cpp  outputwindow.h  pref.cpp  pref.h  scanthread.cpp  scanthread.h  searchbox.cpp  searchbox.h  verifythread.cpp  verifythread.h  xmlentityitem.cpp  xmlentityitem.h
src/tests/: CMakeLists.txt  xfc-unit-tests.cpp
src/xfclib/: CMakeLists.txt  fs.cpp  fs.h  misc.cpp  misc.h  plugins.cpp  plugins.h  sha1.h  sha2.h  xfc.cpp  xfc.h  xfcEntity.cpp  xfcEntity.h  xfcapp.h  xfclib.cpp  xfclib.h
